// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Test Render and test app 1`] = `
<Text
  id="welcomeToScards"
  key=".0:$.0"
  variant="superLarge"
>
  <span
    className="css-42"
    id="welcomeToScards"
  >
    Welcome to Scards!
  </span>
</Text>
`;

exports[`App Test Render and test app 2`] = `
<Text
  id="MsgText"
  key=".0:$.$.0"
  variant="large"
>
  <span
    className="css-43"
    id="MsgText"
  >
    Welcome! This is message1
  </span>
</Text>
`;

exports[`App Test Render and test app 3`] = `
<Text
  id="ScardQ1"
  key=".0:$.$.0=020"
  variant="xLarge"
>
  <span
    className="css-71"
    id="ScardQ1"
  >
    Question 1
  </span>
</Text>
`;

exports[`App Test Render and test app 4`] = `
<Text
  id="ScardA1"
  key=".0:$.$.0=023"
  variant="medium"
>
  <span
    className="css-44"
    id="ScardA1"
  >
    Answer 1
  </span>
</Text>
`;

exports[`App Test Render and test app 5`] = `
<textarea
  aria-invalid={false}
  className="ms-TextField-field field-75"
  id="StudyNotesTextField"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onInput={[Function]}
  value="hello"
/>
`;

exports[`App Test Render and test app 6`] = `
<Text
  id="MsgText"
  key=".0:$.$.0"
  variant="large"
>
  <span
    className="css-43"
    id="MsgText"
  >
    Hello there! This is 2
  </span>
</Text>
`;

exports[`App Test Render and test app 7`] = `
<Text
  id="MsgText"
  key=".0:$.$.0"
  variant="large"
>
  <span
    className="css-43"
    id="MsgText"
  >
    Welcome! This is message1
  </span>
</Text>
`;

exports[`App Test Render and test app 8`] = `
<textarea
  aria-invalid={false}
  className="ms-TextField-field field-75"
  id="StudyNotesTextField"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onInput={[Function]}
  value="Hello Study Notes"
/>
`;

exports[`App Test Render and test app 9`] = `
<input
  aria-invalid={false}
  aria-labelledby="TextFieldLabel43"
  className="ms-TextField-field field-108"
  id="newScardQuestion"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onInput={[Function]}
  type="text"
  value="Question 1"
/>
`;

exports[`App Test Render and test app 10`] = `
<Text
  id="ScardQ1"
  key=".0:$.$.0=020"
  variant="xLarge"
>
  <span
    className="css-71"
    id="ScardQ1"
  >
    Question 1
  </span>
</Text>
`;
